# physics-tree

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json
.claude/skills/: browser-verify.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/debug/: formula-preview-21.md  latex-plain-text-quiz.md  xp-toast-never-appears.md
.planning/debug/resolved/: formula-preview-21.md  latex-plain-text-quiz.md  xp-toast-never-appears.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
content/classical-mechanics/: calculus.md  calculus.quiz.json  circular-motion.md  circular-motion.quiz.json  conservation-of-energy.md  conservation-of-energy.quiz.json  conservation-of-momentum.md  conservation-of-momentum.quiz.json  differential-equations.md  differential-equations.quiz.json  gravitational-orbits.md  gravitational-orbits.quiz.json  kinematics.md  kinematics.quiz.json  mass.md  mass.quiz.json  newtons-first-law.md  newtons-first-law.quiz.json  newtons-second-law.md  newtons-second-law.quiz.json  newtons-third-law.md  newtons-third-law.quiz.json  projectile-motion.md  projectile-motion.quiz.json  simple-harmonic-motion.md  simple-harmonic-motion.quiz.json  space-and-time.md  space-and-time.quiz.json  vectors.md  vectors.quiz.json  work-energy-theorem.md  work-energy-theorem.quiz.json
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app/src/components/: health_indicator.rs  mod.rs
crates/app/src/components/auth/: avatar_dropdown.rs  login_form.rs  mod.rs  register_form.rs
crates/app/src/components/content/: breadcrumb.rs  derivation_stepper.rs  inline_concept_link.rs  markdown_renderer.rs  mastery_badge.rs  misconception_card.rs  mod.rs  next_concept.rs  prereqs_banner.rs  toc.rs
crates/app/src/components/dashboard/: mini_tree.rs  mod.rs  review_widget.rs  stats_cards.rs  streak_detail.rs
crates/app/src/components/graph/: canvas.rs  mod.rs  panel.rs  search.rs  tooltip.rs
crates/app/src/components/learning_room/: celebration.rs  format_switcher.rs  mark_complete.rs  mod.rs  phase_content.rs  phase_quiz.rs  phase_tab.rs
crates/app/src/components/quiz/: checkpoint.rs  formula_input.rs  matching.rs  mod.rs  multiple_choice.rs  xp_toast.rs
crates/app/src/components/simulation/: controls.rs  embed.rs  mod.rs  plot.rs
crates/app/src/js/: katex_bridge.js  mathjs_bridge.js  sigma_bridge.js  sigma_entry.js  toc_bridge.js
crates/app/src/pages/: concept.rs  dashboard.rs  graph_explorer.rs  landing.rs  learning_room.rs  login.rs  mod.rs  register.rs  review.rs
crates/db/: Cargo.toml
crates/db/src/: content_repo.rs  fsrs_logic.rs  graph_repo.rs  lib.rs  phase_progress_repo.rs  progress_repo.rs  review_repo.rs  user_repo.rs  xp_logic.rs
crates/domain/: Cargo.toml
crates/domain/src/: content.rs  content_spec.rs  graph.rs  lib.rs  quiz.rs  user.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  lib.rs  main.rs  routes.rs
crates/server/src/handlers/: auth.rs  content.rs  graph.rs  health.rs  learning_room.rs  mod.rs  progress.rs  review.rs
crates/server/tests/: auth_integration.rs  learning_room_integration.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: lib.rs  traits.rs
crates/simulation/src/mechanics/: harmonic.rs  incline.rs  mod.rs  orbital.rs  pendulum.rs  projectile.rs
crates/simulation/src/render/: canvas.rs
docs/: content-spec.md
migrations/: 20260318000001_initial_schema.sql  20260318000002_seed_stub_nodes.sql  20260319000001_expand_seed_graph.sql  20260322000001_seed_content_metadata.sql  20260323000001_seed_gravitational_orbits_metadata.sql  20260323000002_sessions_and_events.sql  20260323000003_gamification.sql  20260324000001_fsrs_state.sql  20260328000001_node_phases_and_nodes_metadata.sql  20260328000002_migrate_v1_and_drop_content_metadata.sql  20260329000001_user_phase_progress.sql
public/js/: confetti_bundle.js  katex_bundle.css  katex_bundle.js  mathjs_bundle.js  sigma_bundle.js  toc_bundle.js
style/: main.css
tools/authoring/: __main__.py  calibrate.py  config.py  models.py  pipeline.py  pipeline_config.yaml  pyproject.toml  quality_gate.py  report.py  staging.py  subprocess_tools.py  test-spec.yaml
tools/authoring/agents/: author.py  reviewer.py  student.py
tools/authoring/prompts/: author_system.md  pedagogy_reviewer.md  physics_reviewer.md  student_simulator.md
tools/authoring/test-fixtures/gold/: gold-manifest.yaml
tools/authoring/test-fixtures/gold/kinematics-bad-judgment-high-cognitive-load/: review-report.md
tools/authoring/test-fixtures/gold/kinematics-bad-judgment-no-fading/: review-report.md
tools/authoring/test-fixtures/gold/kinematics-bad-judgment-poor-self-explanation/: phase-5.md  review-report.md
tools/authoring/test-fixtures/gold/kinematics-bad-judgment-rubber-stamp/: phase-4.md  review-report.md
tools/authoring/test-fixtures/gold/kinematics-bad-judgment-wrong-formula/: review-report.md
tools/authoring/test-fixtures/gold/kinematics-bad-yaml-syntax/: node.yaml
tools/authoring/test-fixtures/gold/kinematics-broken-latex-display/: phase-2.md
tools/authoring/test-fixtures/gold/kinematics-broken-latex-inline/: phase-2.md
tools/authoring/test-fixtures/gold/kinematics-broken-latex-phase-0/: node.yaml  phase-0.md  phase-2.md
tools/authoring/test-fixtures/gold/kinematics-broken-latex-phase-4/: phase-4.md
tools/authoring/test-fixtures/gold/kinematics-empty-misconceptions/: node.yaml
tools/authoring/test-fixtures/gold/kinematics-empty-node-yaml/: phase-1.md
tools/authoring/test-fixtures/gold/kinematics-missing-prerequisites/: node.yaml
tools/authoring/test-fixtures/gold/kinematics-short-phase-1/: node.yaml  phase-1.md
tools/authoring/test-fixtures/gold/kinematics-short-phase-2/: phase-2.md
tools/authoring/test-fixtures/gold/kinematics-wrong-eqf-level/: node.yaml
tools/authoring/tests/: test_calibration.py  test_quality_gate.py
(+194 files in other folders)
