[workspace]
members = [
    "crates/domain",
    "crates/db",
    "crates/server",
    "crates/app",
    "crates/simulation",
]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8" }
leptos_router = { version = "0.8" }
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[[workspace.metadata.leptos]]
name = "physics-tree"
bin-package = "server"
lib-package = "app"
output-name = "physics-tree"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = ""
tailwind-input-file = "style/main.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults and supports es6-module and supports es6-module-dynamic-import"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
