[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
domain = { path = "../domain" }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlDivElement"] }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "domain/ssr"]
