[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
domain = { path = "../domain" }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
simulation = { path = "../simulation" }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlDivElement",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "CanvasRenderingContext2d",
    "Element",
    "Node",
    "NodeList",
    "Document",
    "Window",
    "CssStyleDeclaration",
    "DomTokenList",
    "EventTarget",
    "History",
    "Location",
    "Url",
    "UrlSearchParams",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pulldown-cmark = { workspace = true }
regex = { workspace = true }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "domain/ssr"]
