[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain", features = ["ssr"] }
sqlx = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
