[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }

[features]
default = []
ssr = ["sqlx", "serde_json", "pulldown-cmark"]
