[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app", features = ["ssr"] }
domain = { path = "../domain", features = ["ssr"] }
db = { path = "../db" }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
ssr = []
