[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app", features = ["ssr"] }
domain = { path = "../domain", features = ["ssr"] }
db = { path = "../db" }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.8"
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["std"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
axum-extra = { version = "0.12", features = ["cookie"] }
time = "0.3"
serde-saphyr = { workspace = true }
gray_matter = { workspace = true }
pulldown-cmark = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
serde_json = { workspace = true }
dotenvy = "0.15"

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[features]
default = []
ssr = []
