[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
rapier2d = { version = "0.32", features = ["f32"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "Document",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
